# Hackathon2-phase2

./: .env  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.spec-kit/: config.yaml
backend/: .gitignore  CLAUDE.md  Dockerfile  database.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  test_connections.py
backend/api/: index.py
backend/middleware/: jwt.py
backend/routes/: auth.py  tasks.py
backend/services/: embeddings.py  qdrant.py  tasks.py
backend/tests/: test_authentication.py  test_authorization.py
frontend/: CLAUDE.md  Dockerfile  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  combined-stream.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  form-data.js  (+14 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: EmptyState.tsx  LoadingSpinner.tsx  TaskFilter.tsx  TaskFilterComponent.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  TaskSearch.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
specs/: architecture.md  implementation-plan.md  overview.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  task-crud.md
specs/ui/: components.md  pages.md
(+22 files in other folders)
